Fix toc width so that it doesn't create a horizontal scrollbar on smaller heights screen.

--- a/themes/cypress/source/css/_partial/toc.scss
+++ b/themes/cypress/source/css/_partial/toc.scss
@@ -27,7 +27,7 @@
 
 #article-toc-inner {
   padding: 2.5em 20px;
-  width: $sidebar-width;
+  width: $sidebar-width - 40px;
 
   .sidebar-title {
     margin-top: 0;
